//
// Copyright 2016 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";
import "gnmi_ext.proto";

package gnmi;

extend google.protobuf.FileOptions {
  string gnmi_service = 1001;
}

option (gnmi_service) = "0.10.0";
option go_package = "github.com/openconfig/gnmi/proto/gnmi";

service gNMI {
  rpc Capabilities(CapabilityRequest) returns (CapabilityResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Subscribe(stream SubscribeRequest) returns (stream SubscribeResponse);
}

message Notification {
  int64 timestamp = 1;
  Path prefix = 2;
  repeated Update update = 4;
  repeated Path delete = 5;
  bool atomic = 6;
  reserved "alias";
  reserved 3;
}

message Update {
  Path path = 1;
  Value value = 2 [deprecated = true];
  TypedValue val = 3;
  uint32 duplicates = 4;
}

message TypedValue {
  oneof value {
    string string_val = 1;
    int64 int_val = 2;
    uint64 uint_val = 3;
    bool bool_val = 4;
    bytes bytes_val = 5;
    float float_val = 6 [deprecated = true];
    double double_val = 14;
    Decimal64 decimal_val = 7 [deprecated = true];
    ScalarArray leaflist_val = 8;
    google.protobuf.Any any_val = 9;
    bytes json_val = 10;
    bytes json_ietf_val = 11;
    string ascii_val = 12;
    bytes proto_bytes = 13;
  }
}

message Path {
  repeated string element = 1 [deprecated = true];
  string origin = 2;
  repeated PathElem elem = 3;
  string target = 4;
}

message PathElem {
  string name = 1;
  map<string, string> key = 2;
}

message Value {
  option deprecated = true;
  bytes value = 1;
  Encoding type = 2;
}

enum Encoding {
  JSON = 0;
  BYTES = 1;
  PROTO = 2;
  ASCII = 3;
  JSON_IETF = 4;
}

message Error {
  option deprecated = true;
  uint32 code = 1;
  string message = 2;
  google.protobuf.Any data = 3;
}

message Decimal64 {
  option deprecated = true;
  int64 digits = 1;
  uint32 precision = 2;
}

message ScalarArray {
  repeated TypedValue element = 1;
}

message SubscribeRequest {
  oneof request {
    SubscriptionList subscribe = 1;
    Poll poll = 3;
  }
  repeated gnmi_ext.Extension extension = 5;
}

message Poll {}

message SubscribeResponse {
  oneof response {
    Notification update = 1;
    bool sync_response = 3;
    Error error = 4 [deprecated = true];
  }
  repeated gnmi_ext.Extension extension = 5;
}

message SubscriptionList {
  Path prefix = 1;
  repeated Subscription subscription = 2;
  QOSMarking qos = 4;
  enum Mode {
    STREAM = 0;
    ONCE = 1;
    POLL = 2;
  }
  Mode mode = 5;
  bool allow_aggregation = 6;
  repeated ModelData use_models = 7;
  Encoding encoding = 8;
  bool updates_only = 9;
  reserved 3;
  reserved "use_aliases";
}

message Subscription {
  Path path = 1;
  SubscriptionMode mode = 2;
  uint64 sample_interval = 3;
  bool suppress_redundant = 4;
  uint64 heartbeat_interval = 5;
}

enum SubscriptionMode {
  TARGET_DEFINED = 0;
  ON_CHANGE = 1;
  SAMPLE = 2;
}

message QOSMarking {
  uint32 marking = 1;
}

message SetRequest {
  Path prefix = 1;
  repeated Path delete = 2;
  repeated Update replace = 3;
  repeated Update update = 4;
  repeated Update union_replace = 6;
  repeated gnmi_ext.Extension extension = 5;
}

message SetResponse {
  Path prefix = 1;
  repeated UpdateResult response = 2;
  Error message = 3 [deprecated = true];
  int64 timestamp = 4;
  repeated gnmi_ext.Extension extension = 5;
}

message UpdateResult {
  enum Operation {
    INVALID = 0;
    DELETE = 1;
    REPLACE = 2;
    UPDATE = 3;
    UNION_REPLACE = 4;
  }
  int64 timestamp = 1 [deprecated = true];
  Path path = 2;
  Error message = 3 [deprecated = true];
  Operation op = 4;
}

message GetRequest {
  Path prefix = 1;
  repeated Path path = 2;
  enum DataType {
    ALL = 0;
    CONFIG = 1;
    STATE = 2;
    OPERATIONAL = 3;
  }
  DataType type = 3;
  Encoding encoding = 5;
  repeated ModelData use_models = 6;
  repeated gnmi_ext.Extension extension = 7;
}

message GetResponse {
  repeated Notification notification = 1;
  Error error = 2 [deprecated = true];
  repeated gnmi_ext.Extension extension = 3;
}

message CapabilityRequest {
  repeated gnmi_ext.Extension extension = 1;
}

message CapabilityResponse {
  repeated ModelData supported_models = 1;
  repeated Encoding supported_encodings = 2;
  string gNMI_version = 3;
  repeated gnmi_ext.Extension extension = 4;
}

message ModelData {
  string name = 1;
  string organization = 2;
  string version = 3;
}
